All_Component_DX/force-app/main/default/objects/SPM_Mean_Time_Between_Failure__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the IB&apos;s Account</description>
    <inlineHelpText>Lookup to the IB&apos;s Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SPM - Mean Time Between Failures</relationshipLabel>
    <relationshipName>SPM_Mean_Time_Between_Failures</relationshipName>
    <type>Lookup</type>
</CustomField>