All_Component_DX/force-app/main/default/objects/SPM_Mean_Time_Between_Failure__c/fields/Actual_Uptime__c.field-meta.xml
<CustomField>
    <fullName>Actual_Uptime__c</fullName>
    <description>Holds the difference of Expected Uptime and the Downtime of the IB</description>
    <formula>Expected_Uptime__c  -  Downtime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Holds the difference of Expected Uptime and the Downtime of the IB</inlineHelpText>
    <label>Actual Uptime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>