All_Component_DX/force-app/main/default/objects/SPM_Mean_Time_Between_Failure__c/fields/Downtime__c.field-meta.xml
<CustomField>
    <fullName>Downtime__c</fullName>
    <description>Holds the sum of down-time information captured from Work-Order</description>
    <inlineHelpText>Holds the sum of down-time information captured from Work-Order</inlineHelpText>
    <label>Downtime (Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>