All_Component_DX/force-app/main/default/objects/SPM_Mean_Time_Between_Failure__c/fields/Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>Installed_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Installed Product for which the uptime and downtime information is recorded.</description>
    <inlineHelpText>Lookup to the Installed Product for which the uptime and downtime information is recorded.</inlineHelpText>
    <label>Installed Product</label>
    <referenceTo>Installed_Product__c</referenceTo>
    <relationshipLabel>SPM - Mean Time Between Failures</relationshipLabel>
    <relationshipName>SPM_Mean_Time_Between_Failures</relationshipName>
    <type>Lookup</type>
</CustomField>