All_Component_DX/force-app/main/default/objects/SPM_Mean_Time_Between_Failure__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Product of the Installed Base.</description>
    <inlineHelpText>Lookup to Product of the Installed Base.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SPM - Mean Time Between Failures</relationshipLabel>
    <relationshipName>SPM_Mean_Time_Between_Failures</relationshipName>
    <type>Lookup</type>
</CustomField>