All_Component_DX/force-app/main/default/objects/SPM_Mean_Time_Between_Failure__c/fields/Workorder_Count__c.field-meta.xml
<CustomField>
    <fullName>Workorder_Count__c</fullName>
    <description>Holds the count of work-order that were created against the IB</description>
    <inlineHelpText>Holds the count of work-order that were created against the IB</inlineHelpText>
    <label>Workorder Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>